--- a/src/components/Separator.astro
+++ b/src/components/Separator.astro
@@ -2,7 +2,7 @@
 ---
 
 <div class="rule">
-  <img src="/assets/rule.png" alt="" role="presentation" loading="lazy" />
+  <img src={import.meta.env.BASE_URL + "assets/rule.png"} alt="" role="presentation" loading="lazy" />
 </div>
 
 <style>
