fix missing slash in asset paths

--- a/src/components/MenuItemContainerView.astro
+++ b/src/components/MenuItemContainerView.astro
@@ -1,7 +1,7 @@
 <ul>
   <slot />
 </ul>
-<img class="nav-bar" src={import.meta.env.BASE_URL + "assets/bar-left.png"} alt="Decorative navigation bar" />
+<img class="nav-bar" src={import.meta.env.BASE_URL + "/assets/bar-left.png"} alt="Decorative navigation bar" />
 <style>
   ul {
     list-style: none;
